# Video-Search-Engine

./: .env  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: embeddings.py  main.py  search.py  video_processing.py
data/embeddings/: faiss.index  video_map.json
